--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "@radix-ui/react-slot": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "lucide-react": "0.553.0",
-    "next": "16.0.1",
+    "lucide-react": "0.554.0",
+    "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.17",
-    "@types/node": "24.10.0",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "firebase-tools": "14.24.1"
+    "firebase-tools": "14.25.0"
   }
 }
